Put riscv toolchain in /opt

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,9 +25,9 @@ jobs:
     # set up riscv64 gnu toolchain
     - name: Install RISC-V toolchain
       run: |
-        wget -q https://static.dev.sifive.com/dev-tools/freedom-tools/v2020.12/riscv64-unknown-elf-toolchain-10.2.0-2020.12.8-x86_64-linux-ubuntu14.tar.gz -O riscv.tar.gz
-        mkdir riscv-toolchain && tar -xf riscv.tar.gz -C riscv-toolchain --strip-components=1
-        echo "$PWD/riscv-toolchain/bin" >> $GITHUB_PATH
+        wget -q https://static.dev.sifive.com/dev-tools/freedom-tools/v2020.12/riscv64-unknown-elf-toolchain-10.2.0-2020.12.8-x86_64-linux-ubuntu14.tar.gz -O /opt/riscv.tar.gz
+        mkdir /opt/riscv-toolchain && tar -xf /opt/riscv.tar.gz -C /opt/riscv-toolchain --strip-components=1
+        echo "/opt/riscv-toolchain/bin" >> $GITHUB_PATH
 
     - name: Lint
       run: knit lint
