Re-enable linter check

--- a/.dscanner.ini
+++ b/.dscanner.ini
@@ -105,7 +105,7 @@ trust_too_much="enabled"
 ; Check for redundant storage classes on variable declarations
 redundant_storage_classes="enabled"
 ; Check for unused function return values
-unused_result="disabled"
+unused_result="enabled"
 ; Enable cyclomatic complexity check
 cyclomatic_complexity="disabled"
 ; Maximum cyclomatic complexity after which to issue warnings
