--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: dlang-community/setup-dlang@v1
       with:
-        compiler: ldc-latest
+        compiler: ldc-1.30
     - uses: zyedidia/setup-knit@v1
 
     - name: Install plboot
