--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,13 +28,13 @@ jobs:
         echo "/opt/gnu-toolchain/bin" >> $GITHUB_PATH
 
     - name: Build (unified, dev)
-      run: knit kernel.boot.bin board=${{ matrix.board }} dc=${{ matrix.compiler }} unified=true profile=dev
+      run: knit boot.bin board=${{ matrix.board }} dc=${{ matrix.compiler }} unified=true profile=dev
 
     - name: Build (not unified, dev)
-      run: knit kernel.boot.bin board=${{ matrix.board }} dc=${{ matrix.compiler }} unified=false profile=dev
+      run: knit boot.bin board=${{ matrix.board }} dc=${{ matrix.compiler }} unified=false profile=dev
 
     - name: Build (unified, release)
-      run: knit kernel.boot.bin board=${{ matrix.board }} dc=${{ matrix.compiler }} unified=true profile=release
+      run: knit boot.bin board=${{ matrix.board }} dc=${{ matrix.compiler }} unified=true profile=release
 
     - name: Build (not unified, release)
-      run: knit kernel.boot.bin board=${{ matrix.board }} dc=${{ matrix.compiler }} unified=false profile=release
+      run: knit boot.bin board=${{ matrix.board }} dc=${{ matrix.compiler }} unified=false profile=release
